--- a/frontend/VitalScan/app.json
+++ b/frontend/VitalScan/app.json
@@ -2,6 +2,9 @@
   "expo": {
     "name": "VitalScan",
     "slug": "VitalScan",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "plugins": [
+      "expo-asset"
+    ]
   }
 }
